--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">jobget</string>
+    <string name="description_about_transaction">Description about transaction</string>
+    <string name="dollar_sign">$</string>
+    <string name="add">Add</string>
+    <string name="add_dollar_value">Add dollar value</string>
 </resources>
