--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add">Add</string>
     <string name="add_dollar_value">Add dollar value</string>
     <string name="add_transaction_button">add transaction button</string>
+    <string name="add_transaction">Add Transaction</string>
 </resources>
