--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="decrement_button">Decrement Button</string>
     <string name="income_cost_label">$ %1$s</string>
     <string name="expense_cost_label">-$ %1$s</string>
+    <string name="fill_in_the_blanks">Please fill in all the elements</string>
+    <string name="date_patten">dd MMM, yyyy</string>
 
     <!--  Spinner dropdown values  -->
     <string-array name="transaction_type_array">
