--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,33 @@
 <resources>
+    <!--  General Strings  -->
     <string name="app_name">jobget</string>
     <string name="description_about_transaction">Description about transaction</string>
     <string name="dollar_sign">$</string>
+    <string name="ok_text">OK</string>
+
+    <!--  MainActivity Strings  -->
+    <string name="expense_text_heading">Expenses</string>
+    <string name="income_text_heading">Income</string>
+    <string name="balance_text_heading">Balance</string>
+
+    <!--  DialogFragment Strings  -->
     <string name="add">Add</string>
     <string name="add_dollar_value">Add dollar value</string>
     <string name="add_transaction_button">add transaction button</string>
     <string name="add_transaction">Add Transaction</string>
     <string name="cancel">Cancel</string>
-    <string name="expense_text_heading">Expenses</string>
-    <string name="income_text_heading">Income</string>
-    <string name="balance_text_heading">Balance</string>
     <string name="increment_button">Increment Button</string>
     <string name="decrement_button">Decrement Button</string>
     <string name="income_cost_label">$ %1$s</string>
     <string name="expense_cost_label">-$ %1$s</string>
     <string name="fill_in_the_blanks">Please fill in all the elements</string>
     <string name="date_pattern">dd MMM, yyyy</string>
+
+    <!--  Dialogs  -->
+    <string name="out_of_bounds_dialog_title">Number out of bounds</string>
+    <string name="out_of_bounds_dialog_message">Value needs to be smaller than %1$d</string>
+    <string name="error_dialog_title">Error</string>
+    <string name="error_dialog_message">"Unexpected error has occurred. Please try again"</string>
 
     <!--  Spinner dropdown values  -->
     <string-array name="transaction_type_array">
